# neuro-rag

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  streamlit_app.py
app/: main.py
app/api/: routes.py  schemas.py
app/core/: cache.py  config.py  exceptions.py  logger.py  state.py
app/embedding/: embedder.py
app/evaluation/: evaluator.py  ragas_evaluator.py
app/ingestion/: chunker.py  document_loader.py  pdf_parser.py
app/llm/: generator.py  prompt_builder.py  query_rewriter.py  workflow.py
app/retrieval/: bm25_retriever.py  reranker.py  retriever.py  vector_store.py
scripts/: ingest.py
tests/: test_cache.py  test_chunker.py  test_embedder.py  test_evaluation.py  test_generator.py  test_hybrid_retriever.py  test_ingestion.py  test_query_rewriter.py  test_ragas_evaluator.py  test_reranker.py  test_retriever.py  test_vector_store.py  test_workflow.py
