[project]
name = "neuro-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.6.3",
    "fastapi==0.115.12",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-groq==0.3.2",
    "langchain-huggingface==0.1.2",
    "langgraph==0.2.60",
    "loguru==0.7.3",
    "pydantic-settings==2.9.1",
    "pypdf==5.4.0",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sentence-transformers==3.4.1",
    "streamlit>=1.57.0",
    "uvicorn==0.34.2",
]
